# rxrevolt-chain

./: .clang-format  .gitmodules  AGENTS.md  CMakeLists.txt  README.md  TODO.md
config/: chainparams.hpp  node_config.hpp
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  LEGAL.md  SPECIFICATIONS.md  WHITEPAPER.md
scripts/: build.sh  ipfs_bootstrap.sh  run-tests.sh  run_local_node.sh  rxrevolt_node.conf
src/: main.cpp
src/connectors/: ehr_connector.hpp
src/consensus/: block_validation.hpp  cid_randomness.hpp  pop_consensus.hpp  reward_scheduler.hpp  snapshot_validation.hpp
src/core/: block.hpp  chainstate.hpp  daily_snapshot.hpp  document_queue.hpp  ledger.hpp  pinned_state.hpp  privacy_manager.hpp  sync_manager.hpp  transaction.hpp
src/governance/: anti_spam.hpp  cid_moderation.hpp  upgrade_manager.hpp
src/ipfs_integration/: cid_registry.hpp  ipfs_pinner.hpp  merkle_proof.hpp
src/miner/: pop_miner.hpp  proof_generator.hpp  reward_schedule.hpp
src/network/: connection_manager.hpp  http_query_server.cpp  http_query_server.hpp  p2p_node.hpp  protocol_messages.hpp  service_manager.hpp  upgrade_manager.hpp
src/pinner/: content_moderation.hpp  daily_scheduler.hpp  pinner_node.hpp  proof_generator.hpp
src/service/: request.hpp  response.hpp  service_manager.hpp
src/util/: config_parser.hpp  hashing.hpp  logger.hpp  thread_pool.hpp
src/validation_queue/: document_queue.hpp  document_verifier.hpp  pii_stripper.hpp
test/: CMakeLists.txt  test_runner.cpp
test/integration/: test_governance_flows.hpp  test_ipfs_integration.hpp  test_miner_integration.hpp  test_network_integration.hpp
test/unit/: test_block.hpp  test_chainstate.hpp  test_document_queue.hpp  test_pop_consensus.hpp
